--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Projection Mapper — Single File</title>
+<title>GUERILLA_MASK</title>
 
 <!-- Only external dep (for GIFs) -->
 <script src="https://unpkg.com/gifler@0.1.0/gifler.min.js"></script>
@@ -195,6 +195,7 @@
       <div id="hud" class="hud">
         <div><b>Status:</b> <span id="hudStatus">Ready</span></div>
         <div><b>Active:</b> <span id="hudActive">None</span></div>
+        <div><a href="https://github.com/ShyftXero/GUERILLA_MASK">https://github.com/ShyftXero/GUERILLA_MASK</a></div>
       </div>
     </div>
   </main>
