--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
       <span id="version" class="badge">v1.3.0</span>
     </div>
     <div class="row">
-      <button id="saveProjectBtn" class="btn small">💾 Save</button>
+      <button id="saveProjectBtn" class="btn small">Save</button>
       <label class="btn small secondary" title="Load from .json">
-        📂 Load
+        Load
         <input id="loadProjectInput" type="file" accept="application/json" />
       </label>
       <span id="projHint" class="muted" style="font-size:12px"></span>
